--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ html {
   }
   
   .range {
-    -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 8px;
     margin-top: 1.2rem;
